--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -763,7 +763,15 @@ img{
     margin-bottom:var(--mb-0-75);
 }
 
+.portfolio__button{
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
+    cursor: pointer;
+}
 
+.portfolio__button:hover{
+    color:var(--first-color)
+}
 .portfolio__button:hover .button__icon{
     transform: translateX(.25rem);
 }
