--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -763,6 +763,12 @@ img{
     margin-bottom:var(--mb-0-75);
 }
 
+.portfolio__data{
+    display: grid;
+    grid-template-columns: 1fr max-content 1fr;
+    column-gap: 1.5rem;
+}
+
 .portfolio__button{
     font-size: var(--h3-font-size);
     font-weight: var(--font-medium);
